# libcfgparser

./: Makefile.am  README.md  autogen.sh  configure.ac  libcfgparser.h  libcfgparser.pc.in
src/: cfgparser.c  cfgparser.h
